...
                                  ),
                                ),
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      0.0, 20.0, 0.0, 0.0),
                                  child: TextFormField(
                                    key: ValueKey('emailAddress-login_72rk'),
                                    controller:
                                        _model.emailAddressLoginController,
                                    focusNode:
                                        _model.emailAddressLoginFocusNode,
                                    obscureText: false,
                                    decoration: InputDecoration(
...
                                  ),
                                ),
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      0.0, 12.0, 0.0, 0.0),
                                  child: TextFormField(
                                    key: ValueKey('password-login_blju'),
                                    controller: _model.passwordLoginController,
                                    focusNode: _model.passwordLoginFocusNode,
                                    obscureText:
                                        !_model.passwordLoginVisibility,
                                    decoration: InputDecoration(
                                      labelText: 'Password',
...
                                          borderRadius:
                                              BorderRadius.circular(8.0),
                                        ),
                                      ),
                                    ),
                                    FFButtonWidget(
                                      key: ValueKey('Button-Login_ru7g'),
                                      onPressed: () async {
                                        GoRouter.of(context).prepareAuthEvent();

                                        final user =
                                            await authManager.signInWithEmail(
                                          context,
...
